Fix navbar collapse

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
- 
+@media only screen and (max-width: 600px) {
+    .filter-wrapper {
+        margin:0 0 0 0 !important;
+        padding: 0;
+    }
+    
+} 
    
   
 
